<resources>
    <string name="app_name">Jobble</string>
    <string name="forgot">Forgot Password</string>
    <string name="password">Password</string>
    <string name="email">Email Address</string>
    <string name="sigin">SignIn</string>
    <string name="title_activity_home">Home</string>
    <string name="regis">Registration</string>
    <string name="renter_password">Renter Password</string>
    <string name="name">Name</string>
    <string name="signup">New here? SignUp</string>
    <string name="already">Already a member</string>
    <string name="enter_category">Enter Category</string>
    <string name="create">Create</string>
    <string name="title_activity_category_items">Items</string>
    <string name="desc">Item description</string>
    <string name="item_name">Item Name</string>
    <string name="submit">Submit</string>
</resources>
