<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.jobblechallenge.loginpackage.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"

        android:src="@mipmap/bg" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:src="@mipmap/logo"
        android:transitionName="image" />

    <TextView
        android:id="@+id/signinlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/sigin"
        android:textColor="#ffffff"
        android:textSize="30sp" />


    <!-- Email Label -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/textlayone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="@dimen/left_right"
        android:layout_marginRight="@dimen/left_right"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:drawableLeft="@mipmap/email"
            android:drawablePadding="5dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <!-- Password Label -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/label2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textlayone"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="@dimen/left_right"
        android:layout_marginRight="@dimen/left_right"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:textColor="@android:color/white"
            android:drawablePadding="5dp"
            android:drawableLeft="@mipmap/password"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="@dimen/left_right"
        android:layout_marginRight="@dimen/left_right"
        android:layout_marginTop="24dp"
        android:padding="12dp"
        android:text="Login"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/signupl"
        android:layout_width="wrap_content"
        android:textColor="#ffffff"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:text="@string/signup" />


    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signupl"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/forgot"
        android:textColor="#ffffff" />


</RelativeLayout>
