<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:background="@mipmap/bg"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <!--<ImageView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:scaleType="centerCrop"-->
            <!--android:src="@mipmap/bg" />-->

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:src="@mipmap/logo" />

        <TextView
            android:id="@+id/ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:text="@string/regis"
            android:textColor="#ffffff"
            android:textSize="18sp" />


        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textlayone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="8dp"
            android:layout_below="@+id/ll"
            android:layout_marginLeft="@dimen/left_right"
            android:layout_marginRight="@dimen/left_right"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_name"
                android:drawableLeft="@mipmap/user"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:hint="@string/name"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textlaytwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textlayone"
            android:layout_centerInParent="true"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/left_right"
            android:layout_marginRight="@dimen/left_right"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_email"
                android:drawableLeft="@mipmap/email"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:drawablePadding="5dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/label3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textlaytwo"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/left_right"
            android:layout_marginRight="@dimen/left_right"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/password"
                android:drawablePadding="5dp"
                android:textColor="@android:color/white"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/label4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label3"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/left_right"
            android:layout_marginRight="@dimen/left_right"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/renter_password"
                android:layout_width="match_parent"
                android:drawablePadding="5dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:hint="@string/renter_password"
                android:drawableLeft="@mipmap/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_regis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label4"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="@dimen/left_right"
            android:layout_marginRight="@dimen/left_right"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:text="Register"
            android:textColor="@android:color/black" />


        <TextView
            android:id="@+id/already"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_regis"
            android:textColor="#ffffff"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/already" />


    </RelativeLayout>

</ScrollView>