<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.jobblechallenge.additemspackage.AddItem">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/bg"
        android:scaleType="centerCrop"/>


    <ImageView
        android:id="@+id/item_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:src="@mipmap/item"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:id="@+id/pick_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/item_image"
        android:gravity="center">


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label2"
            android:layout_centerHorizontal="true"
            android:padding="12dp"
            android:text="Camera"
            android:textColor="@android:color/black" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label2"
            android:layout_centerHorizontal="true"
            android:padding="12dp"
            android:text="Gallery"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textlayone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="@dimen/left_right"
        android:layout_marginRight="@dimen/left_right"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:drawableLeft="@mipmap/itemname"
            android:hint="@string/item_name"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textlay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textlayone"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="@dimen/left_right"
        android:layout_marginRight="@dimen/left_right"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/item_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:drawableLeft="@mipmap/description"
            android:hint="@string/desc"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/create_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textlay2"
        android:layout_centerHorizontal="true"
        android:padding="12dp"
        android:text="@string/submit"
        android:textColor="@android:color/black" />



</RelativeLayout>
